--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -1,4 +1,4 @@
-<div class="bestDaysFrame" style="height:100%;">
+<div class="bestDaysFrame"  >
  	<div data-ng-repeat="day in Day.days" class="singleDay"> 
   		<div data-ng-click = "Day.showOneDay(day._id)">
 		 	<div class="title">{{day.dayName }}</div>
