--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -12,7 +12,7 @@
 						data-ng-click="User.userViewSwitch = null;
 						               User.userDayView = 'grid';
 						               User.userFormView = 'hide'; 
-						               User.userService.init(User.completeInit);
+						               User.userService.init(completeInit);
 						               ">
 						Home  
 						</div>
