--- a/public/views/foot-of-page.html
+++ b/public/views/foot-of-page.html
@@ -1,11 +1,9 @@
 <footer class="page-footer">
-	<div class="container">
-		<div class="row"> 
-			<div class="col l6 s12">
-    			<h5 class="white-text">The Perfect Day</h5>
-    			<p class="grey-text text-lighten-4">Explore your world. Share your experiences.</p>
-    			<p class="grey-text text-lighten-5">© 2015 The Perfect Day</p>
-  			</div>
- 		</div>
+	<div class="row"> 
+		<div class="col s12 m12 l12">
+			<h5 class="white-text">The Perfect Day</h5>
+			<p class="grey-text text-lighten-4">Explore your world. Share your experiences.</p>
+			<p class="grey-text text-lighten-5">&copy; 2015 The Perfect Day</p>
+		</div>
 	</div>
 </footer>
