--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -7,20 +7,18 @@
  	  	<div class="container" >
 
 
- 	  		
+
 			<ul class='right hide-on-small-and-down button-collapse'>
 
-
-				<li><a  data-ng-show="User.userState==='loggedIn'"
-					    data-ng-click="User.userFormView='show';
-						User.userDayView=null" >
+				<li><a data-ng-show="User.userState==='loggedIn'"
+					    data-ng-click="User.userAddDay='true';User.userDayView='single'">
 		 			  		Create New Day  
 					  
  				</a></li>	
 
 
 				<li><a data-ng-show="User.userState==='loggedIn'"
-					   data-ng-click= "Day.viewEditUserDays(User.username)">
+					   data-ng-click="Day.viewEditUserDays(User.username)">
  		 			  		 {{User.username}} Days    						 
 				</a></li>
 
@@ -393,7 +391,7 @@
 
  
 			<div id='deleteaccount' 
-				data-ng-switch on='User.userViewSwitch'">
+				data-ng-switch on="User.userViewSwitch">
 
 				<div data-ng-switch-when='deleteaccount'>
 
