--- a/public/views/single-day-view.html
+++ b/public/views/single-day-view.html
@@ -1,80 +1,72 @@
-<div style="margin:0 auto;background-color: #F2F6F6; width: 70%">
-			   	<div class='row'>
+<div class="row"> <!-- open row tag -->
+	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->
+		<!-- Begin conditional for editable vs. non-editable single day view -->
+		<div class="form-group">
+			<form data-ng-submit="Day.addDay(Day, User);User.userDayView='grid';">
 
-					<div class="col s6">
-						<section>
-							<div class="form-group" >
-								<form data-ng-submit="Day.addDay(Day, User);User.userDayView='grid';">
+			<h4>{{Day.dayWelcomeMsg}}</h4>
 
-								<h4>{{Day.dayWelcomeMsg}}</h4>
+			<input type="text" class="form-control" data-ng-model="Day.dayName" placeholder="Give your day a name">
 
-<!-- Begin conditional for editable vs. non-editable single day view -->
-								<input type="text" class="form-control" data-ng-model="Day.dayName" placeholder="Give your day a name">
+			<div>by&nbsp;{{User.username}}</div>
+			<textarea class="form-control desc" rows="5" data-ng-model="Day.dayDesc" placeholder="This was a great day because... "></textarea> 
 
-								<div>by&nbsp;{{User.username}}</div>
+			<div class="switch form-control">Child-friendly?
+				<label>
+				No
+				<input type="checkbox" id="child" data-ng-model="Day.child">
+				<span class="lever"></span>
+				Yes
+				</label>
+			</div>
 
-
-								<textarea class="form-control desc" rows="5" data-ng-model="Day.dayDesc" placeholder="This was a great day because... "></textarea> 
-
-								  <div class="switch form-control">Child-friendly?
-								    <label>
-								      No
-								      <input type="checkbox" id="child" data-ng-model="Day.child">
-								      <span class="lever"></span>
-								      Yes
-								    </label>
-								  </div>
-
-								    <!-- Switch -->
-								  <div class="switch form-control">Teen-friendly?
-								    <label>
-								      No
-								      <input type="checkbox" id="teen" data-ng-model="Day.teen">
-								      <span class="lever"></span>
-								      Yes
-								    </label>
-								  </div>
+			<div class="switch form-control">Teen-friendly?
+				<label>
+				No
+				<input type="checkbox" id="teen" data-ng-model="Day.teen">
+				<span class="lever"></span>
+				Yes
+				</label>
+			</div>
 
 
-								<!-- LOCATION controller begin-->
-								<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;">
-									<h5>Find one location or add many!</h5>
-									<input type="text" class="form-control" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
-									<textarea class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
-									<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)">Add this location</div>
-								</div> <!-- END LOCATION CONTROLLER -->
+			<!-- LOCATION controller begin-->
+			<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;">
+				<h5>Find one location or add many!</h5>
+				<input type="text" class="form-control" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
+				<textarea class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
+				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)">Add this location</div>
+			</div> 
+			<!-- END LOCATION CONTROLLER -->
 
+			<!-- TAG CONTROLLER BEGIN -->				
+			<div data-ng-controller="tagController as Tag" class="form-group">
+				<div>Use spaces between tags.</div>
+				<input type="text" 
+				id="tags" 
+				class="form-control" 
+				data-ng-change="Tag.enterTag(dayTags)" 
+				placeholder="Enter some tags" 
+				data-ng-model="Tag.dayTags">
+			</div> 
+			<!--END TAG CONTROLLER -->
 
-								<div data-ng-controller="tagController as Tag" class="form-group">
-									<div>Use spaces between tags.</div>
-									<input type="text" 
-									id="tags" 
-									class="form-control" 
-									data-ng-change="Tag.enterTag(dayTags)" 
-									placeholder="Enter some tags" 
-									data-ng-model="Tag.dayTags">
-								</div> <!--END TAG CONTROLLER -->
+			<button class="btn btn-default" type="submit">Add this day</button> 
+			<button class="btn btn-default" type="submit">Discard without saving</button>
 
-								<button class="btn btn-default" type="submit">Add this day</button> 
-								<button class="btn btn-default" type="submit">Discard without saving</button>
-<!-- End conditional for editable vs. non-editable single day view -->
+			</form>
+		</div> <!-- end form-group -->
+	<!-- End conditional for editable vs. non-editable single day view -->
+	</div> <!-- close column 1 -->
 
-								</form>
-					
-							</div>  
-						</section>
-					</div>
-
-					<aside class="col s6 m2" >
-						<div id="map-canvas"></div>		
-						<div class="locList">
-							<h6>Location list</h6>
-							<location-list></location-list>
-						</div>
-					</aside>
- 
-				</div>   <!--end show hide based on logged in and requested form  -->
-			</div>    <!--close user form view -->
+	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
+		<div id="map-canvas"></div>		
+		<!-- <div class="locList">
+			<h6>Location list</h6>
+		<location-list></location-list>		
+		 </div>-->
+	</div> <!-- close column 2 -->
+</div>    <!--close row tag -->
 
 <!-- 
 
