--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -4,7 +4,7 @@
 
  	<div data-ng-repeat="day in Day.days" class="col singleDay"> 
 		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
-		 	<div class="user" data-ng-click=""><div data-ng-click="Day.getUserProfile(day.userName)">{{day.userName }}</a></div>
+		 	<div class="user"><div data-ng-click="Day.getUserProfile(day.userName)">{{day.userName }}</div></div>
 		 	<div class="daydate">{{day.dayDate}}</div>
 
 		 	<div class="description">{{day.dayDesc}}</div>
