--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -11,7 +11,6 @@
 
 				<li><a><div 
 						data-ng-click="User.userViewSwitch = 'grid';
- 						               User.userFormView   = 'hide'; 
 						               User.userService.init(completeInit);">
 						Home  
 						</div>
@@ -32,11 +31,9 @@
 
 
 				<li><a data-ng-show="User.userState==='loggedIn'" 
-					   data-ng-click="User.userViewSwitch ='profile';
-					   				  User.userFunction='Myaccount';">
+					   data-ng-click="Day.getUserProfile(User.username);User.userFunction='myAccount';">
 			  			My Account
 				</a></li>
-
 
 				<li><a data-ng-show="User.userState==='loggedIn'" 
 					   data-ng-click="User.signOut()" > 
