fixing profile functions

--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -17,7 +17,8 @@
 				</a></li>
 			
 				<li><a  data-ng-show="User.userState==='loggedIn'"
-					    data-ng-click="User.userViewSwitch='single';" >
+					    data-ng-click="User.userViewSwitch='single';
+					    User.userAddDay ='true';" >
 		 			  	Create New Day  					  
  				</a></li>	
 				
