--- a/public/views/single-day-view.html
+++ b/public/views/single-day-view.html
@@ -1,7 +1,7 @@
 <div class="row"> <!-- open row tag -->
 	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->
 		<!-- End conditional for my day -->
-		<div data-ng-show="User.username === Day.chosenDay.data[0].userName">{{User.username}}+{{Day.chosenDay.data[0].userName}}
+		<div data-ng-show="User.username === Day.chosenDay.data[0].userName">
 		<div class="form-group">
 			<form data-ng-submit="Day.addDay(Day,User);User.userDayView='grid';">
 			<h4>{{Day.dayWelcomeMsg}}</h4>
@@ -58,11 +58,21 @@
 		</div> <!-- end form-group -->
 		</div> 
 	<!-- End conditional for my day -->
-<!-- Begin conditional for not my day -->
-<div data-ng-show="User.username !== Day.chosenDay.data[0].userName">
-Not my day!
+
+<!-- Begin conditional for add day -->
+<div data-ng-show="User.userAddDay === 'true'">
+Adding a day!
 </div>
 <!-- End conditional for not my day -->
+
+<!-- Begin conditional for not my day -->
+<div data-ng-show="(User.username !== Day.chosenDay.data[0].userName) && User.userAddDay !== 'true'">
+Not my day! No touching!!!
+</div>
+<!-- End conditional for not my day -->
+
+
+
 
 	</div> <!-- close column 1 -->
 
