fixed extra div tag on index.html

--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -1,7 +1,6 @@
-
-
-	<div class="row bestDaysFrame" style="">
-
+<div class="row bestDaysFrame" style="">
+<!-- TESTING GRID DAY VIEW - Day.days is: {{Day.days}}  and user is: {{User.username}} and {{daycontrollerdays}} is daycontoller
+ -->  	
  	<div data-ng-repeat="day in Day.days" class="col singleDay"> 
 		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
 
