--- a/public/views/pwd-recover.html
+++ b/public/views/pwd-recover.html
@@ -1,32 +1,29 @@
-			<div id='passwordreset' 
-				data-ng-switch on='User.userFunction'
-				data-ng-submit="User.resetPassword()">
+<div class = "regSurround">
+	<i data-ng-click = "User.userViewSwitch=null; User.userViewSwitch='grid'; "  
+		class="material-icons right small" 
+		style ='cursor: pointer;'>clear
+	</i>
 
-				<div data-ng-switch-when='recoverPassword'>
+	<form 	data-ng-submit="User.passwordreset(User.knownemail)">	
 
-					<i data-ng-click = "User.userViewSwitch=null "  
-						class="material-icons right small" 
-						style ='cursor: pointer;'>clear
-					</i>
+		<div class="form group">
+			<label>Forgot Password? Enter E-Mail Used to Register Your Account</label>
+			<input class= "form-control" 
+			type="text" 
+			data-ng-model="User.knownemail">
+		</div>
 
-					<form 
-					data-ng-submit="User.passwordreset(User.knownemail)">	
+		<div class='spacer'></div>
 
-						<div class="form group">
-							<label>Forgot Password? Enter E-Mail Used to Register Your Account</label>
-							<input class= "form-control" 
-							type="text" 
-							data-ng-model="User.knownemail">
-						</div>
+		<input 
+			class="btn  btn-sm btn-block left"
+			type="submit" 
+			value="Send Password Reset Link">
+		</input>
+	</form>
+</div>
+	<br><br><br>
 
-						<div class='spacer'></div>
+			 
 
-						<input 
-							class="btn  btn-sm btn-block left"
-							type="submit" 
-							value="Send Password Reset Link">
-						</input>
-					</form>
-					<p></p>
-				</div>
-		 	</div>
+		 	 
